overflow fix

--- a/task3/assets/styles/main.css
+++ b/task3/assets/styles/main.css
@@ -71,7 +71,7 @@ h3 {
 
 @media screen and (max-width:1479px) {
     html {
-        font-size: 0.68vw;
+        font-size: 0.6666vw;
     }
 }
 
